--- a/configure.ac
+++ b/configure.ac
@@ -34,7 +34,13 @@ AC_CHECK_HEADERS([kadm5/kadm5-pwcheck.h krb5/pwqual_plugin.h], [], [],
     [RRA_INCLUDES_KRB5])
 AC_CHECK_TYPES([krb5_realm], [], [], [RRA_INCLUDES_KRB5])
 AC_CHECK_FUNCS([krb5_free_default_realm \
+    krb5_principal_get_realm \
+    krb5_get_init_creds_opt_alloc \
+    krb5_get_init_creds_opt_set_default_flags \
     krb5_xfree])
+AC_CHECK_FUNCS([krb5_get_init_creds_opt_free],
+    [RRA_FUNC_KRB5_GET_INIT_CREDS_OPT_FREE_ARGS])
+AC_CHECK_DECLS([krb5_kt_free_entry], [], [], [RRA_INCLUDES_KRB5])
 AC_LIBOBJ([krb5-extra])
 RRA_LIB_KRB5_RESTORE
 
