Rewrite the MIT plugin tests in C
Rewrite the MIT plugin test in pure C, using the generated C
data and calling the shell script to create the necessary krb5.conf
file.  Check configuration both via the internal dictionary path
and via appdefaults.

--- a/.gitignore
+++ b/.gitignore
@@ -23,7 +23,7 @@
 /tests/data/cracklib.c
 /tests/data/dictionary.*
 /tests/heimdal/plugin-t
-/tests/mit/plugin
+/tests/mit/plugin-t
 /tests/portable/asprintf-t
 /tests/portable/snprintf-t
 /tests/portable/strlcat-t
