Add support for checking against a CDB database
Add support for building with TinyCDB and then checking passwords
against a CDB database.  There is a new password_dictionary_cdb
krb5.conf configuration setting that configures a CDB directory to
use.  The tests with a CDB dictionary are much simpler: passwords are
rejected if found in the dictionary either literally, with one or two
characters removed from the start or end, or with one character
removed from both the start and the end.  Both a CrackLib and a CDB
dictionary can be specified to check both dictionaries.

--- a/.gitignore
+++ b/.gitignore
@@ -19,8 +19,10 @@
 /m4/lt~obsolete.m4
 /stamp-h1
 /tests/data/.placeholder
+/tests/data/cdb.c
 /tests/data/cracklib.c
 /tests/data/dictionary.*
+/tests/data/wordlist.cdb
 /tests/heimdal/plugin-t
 /tests/mit/plugin-t
 /tests/portable/asprintf-t
