--- a/configure.ac
+++ b/configure.ac
@@ -27,6 +27,7 @@ AM_DISABLE_STATIC
 AC_PROG_LIBTOOL
 
 dnl External libraries.
+RRA_LIB_CDB_OPTIONAL
 RRA_LIB_CRACKLIB
 RRA_LIB_KRB5
 RRA_LIB_KRB5_SWITCH
