--- a/.gitignore
+++ b/.gitignore
@@ -10,7 +10,6 @@
 /config.status
 /configure
 /cracklib/packer
-/external/heimdal-strength
 /libtool
 /m4/libtool.m4
 /m4/ltoptions.m4
@@ -33,6 +32,7 @@
 /tests/tap/libtap.a
 /tests/util/messages-t
 /tests/util/xmalloc
+/tools/heimdal-strength
 .deps/
 .dirstamp
 .libs/
