--- a/.gitignore
+++ b/.gitignore
@@ -30,6 +30,7 @@
 /tests/portable/strlcpy-t
 /tests/runtests
 /tests/tap/libtap.a
+/tests/util/messages-krb5-t
 /tests/util/messages-t
 /tests/util/xmalloc
 /tools/heimdal-strength
