Add Perl testing from rra-c-util
Delete the old, simple POD tests that only looked at the docs for
heimdal-strength and add full POD and Perl testing using the
generic tests from rra-c-util.

--- a/tests/data/perl.conf
+++ b/tests/data/perl.conf
@@ -1,7 +1,15 @@
 # Configuration for Perl tests.  -*- perl -*-
 
+# Ignore the script in cracklib for Perl style checking.  This is verbatim
+# from CrackLib and isn't useful to rewrite.
+@CRITIC_IGNORE = qw(cracklib);
+@STRICT_IGNORE = qw(cracklib);
+
 # Default minimum version requirement for included Perl scripts.
 $MINIMUM_VERSION = '5.006';
+
+# Scripts used only by autogen can use a newer version.
+%MINIMUM_VERSION = ('5.010' => ['tests/data']);
 
 # File must end with this line.
 1;
