Move password test data into a subdirectory
The number of files is only going to grow, so move it into a
subdirectory and use a loop in autogen to generate C versions of
every file to make it easier to add new blocks of test data.

--- a/.gitignore
+++ b/.gitignore
@@ -18,9 +18,8 @@
 /m4/lt~obsolete.m4
 /stamp-h1
 /tests/data/.placeholder
-/tests/data/cdb.c
-/tests/data/cracklib.c
 /tests/data/dictionary.*
+/tests/data/passwords/*.c
 /tests/data/wordlist.cdb
 /tests/heimdal/plugin-t
 /tests/mit/plugin-t
