Probe for setrlimit for the xmalloc tests
Testing the xmalloc utility library requires knowing whether
setrlimit exists.  Add the check to configure.

--- a/configure.ac
+++ b/configure.ac
@@ -66,6 +66,7 @@ AC_TYPE_UINT32_T
 AC_CHECK_TYPES([ssize_t], [], [],
     [#include <sys/types.h>])
 RRA_FUNC_SNPRINTF
+AC_CHECK_FUNCS([setrlimit])
 AC_REPLACE_FUNCS([asprintf strlcat strlcpy])
 
 dnl Write out the results.
