Remove strlcat and strlcpy portable replacements
I no longer use either function in this package, so there's no
need to include the replacements and the code to test them.

--- a/configure.ac
+++ b/configure.ac
@@ -67,7 +67,7 @@ AC_CHECK_TYPES([ssize_t], [], [],
     [#include <sys/types.h>])
 RRA_FUNC_SNPRINTF
 AC_CHECK_FUNCS([setrlimit])
-AC_REPLACE_FUNCS([asprintf strlcat strlcpy])
+AC_REPLACE_FUNCS([asprintf])
 
 dnl Write out the results.
 AC_CONFIG_FILES([Makefile])
