Refactor the CrackLib code into a separate source file
Also rename api.c to general.c, which more accurately reflects the
current contents of that file.

--- a/Makefile.am
+++ b/Makefile.am
@@ -53,8 +53,8 @@ moduledir = $(libdir)/krb5/plugins/pwqual
 
 # Rules for building the password strength plugin.
 module_LTLIBRARIES = plugin/strength.la
-plugin_strength_la_SOURCES = plugin/api.c plugin/cdb.c plugin/error.c \
-	plugin/heimdal.c plugin/internal.h plugin/mit.c
+plugin_strength_la_SOURCES = plugin/cdb.c plugin/cracklib.c plugin/error.c \
+	plugin/general.c plugin/heimdal.c plugin/internal.h plugin/mit.c
 plugin_strength_la_LDFLAGS = -module -avoid-version
 if EMBEDDED_CRACKLIB
     plugin_strength_la_LIBADD = cracklib/libcracklib.la
@@ -66,8 +66,9 @@ plugin_strength_la_LIBADD += portable/libportable.la $(KRB5_LIBS) $(CDB_LIBS)
 # The Heimdal external check program.
 bin_PROGRAMS = tools/heimdal-strength
 tools_heimdal_strength_CFLAGS = $(AM_CFLAGS)
-tools_heimdal_strength_SOURCES = plugin/api.c plugin/cdb.c plugin/error.c \
-	plugin/internal.h tools/heimdal-strength.c
+tools_heimdal_strength_SOURCES = plugin/cdb.c plugin/cracklib.c	\
+	plugin/error.c plugin/general.c plugin/internal.h	\
+	tools/heimdal-strength.c
 if EMBEDDED_CRACKLIB
     tools_heimdal_strength_LDADD = cracklib/libcracklib.la
 else
