--- a/debian/rules
+++ b/debian/rules
@@ -4,7 +4,8 @@
 	dh $@
 
 override_dh_auto_configure:
-	dh_auto_configure -- --enable-reduced-depends
+	dh_auto_configure -- --enable-reduced-depends --with-cracklib \
+	    --with-tinycdb
 
 override_dh_auto_install:
 	dh_auto_install
