--- a/debian/control
+++ b/debian/control
@@ -2,7 +2,8 @@ Source: krb5-strength
 Section: net
 Priority: extra
 Maintainer: Russ Allbery <rra@debian.org>
-Build-Depends: debhelper (>= 9), libcdb-dev, libcrack2-dev, libkrb5-dev
+Build-Depends: debhelper (>= 9), dh-autoreconf, libcdb-dev, libcrack2-dev,
+ libkrb5-dev
 Standards-Version: 3.9.3
 Homepage: http://www.eyrie.org/~eagle/software/krb5-strength/
 Vcs-Git: git://git.eyrie.org/kerberos/krb5-strength.git
