--- a/debian/control
+++ b/debian/control
@@ -6,7 +6,7 @@ Build-Depends: debhelper (>= 9), dh-autoreconf, libcdb-dev, libcrack2-dev,
  libkrb5-dev
 Standards-Version: 3.9.4
 Homepage: http://www.eyrie.org/~eagle/software/krb5-strength/
-Vcs-Git: git://git.eyrie.org/kerberos/krb5-strength.git
+Vcs-Git: git://git.eyrie.org/kerberos/krb5-strength.git -b debian
 Vcs-Browser: http://git.eyrie.org/?p=kerberos/krb5-strength.git
 
 Package: krb5-strength
