--- a/debian/rules
+++ b/debian/rules
@@ -13,7 +13,7 @@ override_dh_auto_configure:
 
 override_dh_auto_install:
 	dh_auto_install --parallel
-	chmod 644 debian/tmp/usr/lib/kadmind/*.so
+	chmod 644 debian/tmp/usr/lib/*/krb5/plugins/pwqual/strength.so
 
 override_dh_installchangelogs:
 	dh_installchangelogs NEWS
