--- a/debian/control
+++ b/debian/control
@@ -11,6 +11,7 @@ Vcs-Browser: http://git.eyrie.org/?p=kerberos/krb5-strength.git
 
 Package: krb5-strength
 Architecture: any
+Pre-Depends: ${misc:Pre-Depends}
 Depends: ${shlibs:Depends}, ${misc:Depends}, ${perl:Depends}
 Recommends: cracklib-runtime, tinycdb
 Enhances: krb5-admin-server, heimdal-kdc
