--- a/debian/rules
+++ b/debian/rules
@@ -21,7 +21,7 @@ override_dh_auto_test:
 
 override_dh_auto_install:
 	dh_auto_install --parallel
-	chmod 644 debian/$(PACKAGE)/usr/lib/*/krb5/plugins/pwqual/strength.so
+	rm debian/$(PACKAGE)/usr/lib/*/krb5/plugins/pwqual/*.la
 
 override_dh_installchangelogs:
 	dh_installchangelogs NEWS
