--- a/debian/rules
+++ b/debian/rules
@@ -1,8 +1,7 @@
 #!/usr/bin/make -f
 
-# Add hardening build flags.  We have to omit PIE because it breaks the Perl
-# module build (and probably the other interpretors as well).
-export DEB_BUILD_MAINT_OPTIONS = hardening=+bindnow
+# Add hardening build flags.
+export DEB_BUILD_MAINT_OPTIONS = hardening=+bindnow,+pie
 
 PACKAGE := $(shell dh_listpackages)
 
