--- a/configure.ac
+++ b/configure.ac
@@ -24,7 +24,7 @@ AM_PROG_CC_C_O
 AC_PROG_INSTALL
 m4_ifdef([AM_PROG_AR], [AM_PROG_AR])
 AM_DISABLE_STATIC
-AC_PROG_LIBTOOL
+LT_INIT
 
 dnl External libraries.
 RRA_LIB_CDB_OPTIONAL
