Update to rra-c-util 4.12 and C TAP Harness 2.3
Update to rra-c-util 4.12:

* Properly check the return status of snprintf and friends.

Update to C TAP Harness 2.3:

* Suppress lazy plans and test summaries if the test failed with bail.
* Add warn_unused_result gcc attributes to relevant functions.

--- a/.gitignore
+++ b/.gitignore
@@ -25,6 +25,7 @@
 /tests/plugin/mit-t
 /tests/portable/asprintf-t
 /tests/portable/snprintf-t
+/tests/portable/strndup-t
 /tests/runtests
 /tests/tap/libtap.a
 /tests/util/messages-krb5-t
