--- a/Makefile.am
+++ b/Makefile.am
@@ -11,10 +11,10 @@ EXTRA_DIST = .gitignore LICENSE autogen cracklib/HISTORY cracklib/LICENCE  \
 	cracklib/README cracklib/genrules.pl cracklib/mkdict tests/HOWTO   \
 	tests/TESTS tests/data/krb5.conf tests/data/make-krb5-conf	   \
 	tests/data/passwords tests/data/perl.conf tests/data/perlcriticrc  \
-	tests/data/perltidyrc tests/data/wordlist tests/data/wordlist.cdb  \
-	tests/docs/pod-spelling-t tests/docs/pod-t tests/perl/critic-t	   \
-	tests/perl/minimum-version-t tests/perl/strict-t		   \
-	tests/tap/libtap.sh tests/tap/perl/Test/RRA.pm			   \
+	tests/data/perltidyrc tests/data/valgrind.supp tests/data/wordlist \
+	tests/data/wordlist.cdb tests/docs/pod-spelling-t tests/docs/pod-t \
+	tests/perl/critic-t tests/perl/minimum-version-t		   \
+	tests/perl/strict-t tests/tap/libtap.sh tests/tap/perl/Test/RRA.pm \
 	tests/tap/perl/Test/RRA/Config.pm				   \
 	tests/tap/perl/Test/RRA/Automake.pm tests/tools/cdbmake-wordlist-t \
 	tests/tools/heimdal-strength-t tests/util/xmalloc-t		   \
