--- a/tests/data/perl.conf
+++ b/tests/data/perl.conf
@@ -5,6 +5,14 @@
 @CRITIC_IGNORE = qw(cracklib);
 @STRICT_IGNORE = qw(cracklib);
 
+# The Heimdal history implementation uses a bunch of modules, but may not be
+# of interest to all users.  Skip strict testing if its prerequisites aren't
+# installed.
+@STRICT_PREREQ = qw(
+  DB_File::Lock Crypt::PBKDF2 Getopt::Long::Descriptive IPC::Run JSON
+  Readonly
+);
+
 # Default minimum version requirement for included Perl scripts.
 $MINIMUM_VERSION = '5.010';
 
