--- a/Makefile.am
+++ b/Makefile.am
@@ -17,8 +17,8 @@ EXTRA_DIST = .gitignore LICENSE autogen cracklib/HISTORY cracklib/LICENCE  \
 	tests/perl/strict-t tests/tap/libtap.sh tests/tap/perl/Test/RRA.pm \
 	tests/tap/perl/Test/RRA/Config.pm				   \
 	tests/tap/perl/Test/RRA/Automake.pm tests/tools/cdbmake-wordlist-t \
-	tests/tools/heimdal-strength-t tests/util/xmalloc-t		   \
-	tools/heimdal-strength.pod
+	tests/tools/heimdal-history-t tests/tools/heimdal-strength-t	   \
+	tests/util/xmalloc-t tools/heimdal-strength.pod
 
 # Do this globally.  Everything needs to find the Kerberos headers and
 # libraries, and if we're using the system CrackLib or libcdb, add its
