--- a/.gitignore
+++ b/.gitignore
@@ -24,6 +24,7 @@
 /tests/plugin/heimdal-t
 /tests/plugin/mit-t
 /tests/portable/asprintf-t
+/tests/portable/mkstemp-t
 /tests/portable/snprintf-t
 /tests/portable/strndup-t
 /tests/runtests
