Rename cdbmake-wordlist and add SQLite support
cdbmake-wordlist has been renamed to krb5-strength-wordlist.
Generating CDB dictionaries now requires the -c option; see the
documentation for more information.  A SQLite database of dictionary
words can now be created instead, using the -s option.

--- a/.gitignore
+++ b/.gitignore
@@ -21,6 +21,7 @@
 /tests/data/dictionary.*
 /tests/data/passwords/*.c
 /tests/data/wordlist.cdb
+/tests/data/wordlist.sqlite
 /tests/plugin/heimdal-t
 /tests/plugin/mit-t
 /tests/portable/asprintf-t
