--- a/debian/control
+++ b/debian/control
@@ -4,7 +4,7 @@ Priority: extra
 Maintainer: Russ Allbery <rra@debian.org>
 Build-Depends: debhelper (>= 9), cracklib-runtime, dh-autoreconf,
  libcdb-dev, libcrack2-dev, libcrypt-pbkdf2-perl, libdb-file-lock-perl,
- libdbd-sqlite-perl, libdbi-perl, libfile-slurp-perl,
+ libdbd-sqlite3-perl, libdbi-perl, libfile-slurp-perl,
  libgetopt-long-descriptive-perl, libipc-run-perl, libjson-perl,
  libkrb5-dev (>= 1.9), libperl6-slurp-perl, libreadonly-perl,
  libsqlite3-dev, libtest-pod-perl, libtest-minimumversion-perl,
@@ -19,7 +19,7 @@ Architecture: any
 Pre-Depends: ${misc:Pre-Depends}
 Depends: ${shlibs:Depends}, ${misc:Depends}, ${perl:Depends}
 Recommends: cracklib-runtime, libcrypt-pbkdf2-perl, libdb-file-lock-perl,
- libdbd-sqlite-perl, libdbi-perl, libgetopt-long-descriptive-perl,
+ libdbd-sqlite3-perl, libdbi-perl, libgetopt-long-descriptive-perl,
  libipc-run-perl, libjson-perl, libreadonly-perl, tinycdb
 Enhances: krb5-admin-server, heimdal-kdc
 Description: Password strength checking for Kerberos KDCs
