--- a/debian/control
+++ b/debian/control
@@ -8,7 +8,7 @@ Build-Depends: debhelper (>= 9), cracklib-runtime, dh-autoreconf,
  libgetopt-long-descriptive-perl, libipc-run-perl, libjson-perl,
  libkrb5-dev (>= 1.9), libperl6-slurp-perl, libreadonly-perl,
  libsqlite3-dev, libtest-pod-perl, libtest-minimumversion-perl,
- libtest-strict-perl, perl, tinycdb
+ libtest-strict-perl, perl, pkg-config, tinycdb
 Standards-Version: 3.9.5
 Homepage: http://www.eyrie.org/~eagle/software/krb5-strength/
 Vcs-Git: git://git.eyrie.org/kerberos/krb5-strength.git -b debian
